--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 openai = "^0.28.0"
 python-dotenv = "^1.0.0"
 windows-curses = "^2.3.1"
+aioconsole = "^0.6.2"
 
 
 [build-system]
