--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 openai = "^0.28.0"
 python-dotenv = "^1.0.0"
-windows-curses = "^2.3.1"
+windows-curses = { version="^2.3.1", optional = true }
 aioconsole = "^0.6.2"
 
 
