--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 blight = "blight.__main__:main"
+designer = "docker compose run structurizr"
