--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3'
 services:
   design:
     image: structurizr/lite
-    restart: no
+    tty: true
+    stdin_open: true
     ports:
       - "8080:8080"
     volumes:
