--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,13 @@ readme = "README.md"
 python = "^3.11"
 openai = "^0.28.0"
 python-dotenv = "^1.0.0"
-windows-curses = { version="^2.3.1", optional = true }
 aioconsole = "^0.6.2"
+termcolor = "^2.3.0"
+
+
+[tool.poetry.dependencies.windows-curses]
+version = "^2.3.1"
+markers = "sys_platform == 'win32'"
 
 
 [build-system]
@@ -19,4 +24,4 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.poetry.scripts]
-blight = "blight.__main__:main"
+blight = "blight:main"
