--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,6 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./.design:/usr/local/structurizr
+      - ./designs:/usr/local/structurizr
     profiles:
       - design
